tests/baselines/reference/overloadsAndTypeArgumentArityErrors.errors.txt
tests/cases/compiler/overloadsAndTypeArgumentArityErrors.ts(5,1): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/overloadsAndTypeArgumentArityErrors.ts(6,1): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/overloadsAndTypeArgumentArityErrors.ts(6,1): error TS2350: Only a void function can be called with the 'new' keyword.


==== tests/cases/compiler/overloadsAndTypeArgumentArityErrors.ts (3 errors) ====
    declare function Callbacks(flags?: string): void;
    declare function Callbacks<T>(flags?: string): void;
    declare function Callbacks<T1, T2>(flags?: string): void;
    
    Callbacks<number, string, boolean>('s'); // wrong number of type arguments
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    new Callbacks<number, string, boolean>('s'); // wrong number of type arguments
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2350: Only a void function can be called with the 'new' keyword.